Fixed welcome text (wrong margin)

--- a/static/realestate/css/userpanel.css
+++ b/static/realestate/css/userpanel.css
@@ -1,3 +1,11 @@
+#welcome h3{
+  margin-left: 30px;
+}
+
+#account a{
+  margin-left: 15px;
+}
+
 #deals h2{
   color: #0d3532;
 }
